--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@layer utilities {
+  .no-scrollbar {
+    scrollbar-width: none; /* для Firefox */
+    -ms-overflow-style: none; /* для Internet Explorer и Edge */
+    &::-webkit-scrollbar {
+      display: none; /* для WebKit (Chrome, Safari, и т.д.) */
+    }
+  }
+} 
+
 :root {
   --primary-text-color: #FFFFFF;
   --invisible-text: #BCC9DA;
