--- a/src/components/Numbers/Number.module.css
+++ b/src/components/Numbers/Number.module.css
@@ -1,7 +1,188 @@
 .main__section{
-
+    display:flex;
+    justify-content:center;
+    align-itmes:center;
+    color:white;
+    padding-left:16px;
+    padding-right:16px;
+    position:relative;
+}
+.section_hidden{
+    display:hidden;
+}
+.section__info_bg{
+    width: 320.053px;
+    height: 167.416px;
+    transform: rotate(4.493deg);
+    flex-shrink: 0; 
+    position:absolute;
+    left:-20px;
+    top:16px;
+    overflow:hidden;
+}
+.section__info_bg2{
+    width: 320.053px;
+    height: 167.416px;
+    transform: rotate(-19.493deg);
+    flex-shrink: 0;
+    position:absolute;
+    bottom:0;
+    right:-10px;
+    overflow:hidden;
 }
 
-.container{
+.section__info{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction:column;
+        padding-top:60px;
+        padding-bottom:60px;
+}
+
+.header__section_name{
+    @media (max-width:650px){
+        text-align: center;
+        font-family: Montserrat;
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 32px;
+        padding-top:10px;
+        padding-bottom:20px;
+}
+        @media(min-width:650px)and (max-width: 1280px){
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 32px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 60px;
+            padding-bottom:20px;
+        }
     
+        @media(min-width: 1280px){
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 60px;
+            padding-bottom:30px;
+        }
+}
+.container__section{
+    @media (max-width:650px){
+    display:flex;
+    gap:20px;
+    flex-direction:column;
+}
+
+    @media(min-width:650px)and (max-width: 1020px){
+        display:grid;
+        grid-template-columns:350px 350px;
+        grid-template-rows:150px 150px;
+        gap:10px;
+        padding-left:25px;
+    }
+    @media(min-width:1020px)and (max-width: 1280px){
+        display:grid;
+        grid-template-columns:340px 340px 340px;
+        grid-template-rows:150px 150px;
+        gap:10px;
+        padding-left:25px;
+    }
+
+    @media(min-width: 1280px)and (max-width: 1580px){
+        display:grid;
+        grid-template-columns:380px 380px 380px;
+        grid-template-rows:170px 170px;
+        gap:10px;
+        padding-left:25px;
+    }
+    @media(min-width: 1580px){
+        display:grid;
+        grid-template-columns:400px 400px 400px;
+        grid-template-rows:190px 190px;
+        gap:10px;
+        padding-left:25px;
+    }
+}
+.one_section{
+    @media (max-width:650px){
+        display:flex;
+        background-color:#23303F;
+        padding:30px 24px;
+        gap:20px;
+        max-width:340px;
+        height:130px;
+    }
+    
+    @media(min-width:650px)and (max-width: 1020px){
+        display:flex;
+        background-color:#23303F;
+        padding:30px 24px;
+        gap:20px;
+        max-width:320px;
+        height:125px;
+    }
+        @media(min-width:1020px)and (max-width: 1280px){
+            display:flex;
+            background-color:#23303F;
+            padding:30px 24px;
+            gap:20px;
+            max-width:310px;
+            height:140px;
+        }
+    
+        @media(min-width: 1280px)and (max-width: 1580px){
+            display:flex;
+            background-color:#23303F;
+            padding:30px 24px;
+            gap:30px;
+            max-width:360px;
+            height:150px;
+        }
+        @media(min-width: 1580px){
+            display:flex;
+            background-color:#23303F;
+            padding:30px 24px;
+            gap:30px;
+            max-width:390px;
+            height:180px;
+        }
+}
+
+.section__info_name{
+    color: var(--light-blue-text, #9FCCFF);
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.section__info_text{
+    color: #BCC9DA;
+    font-style: normal;
+    font-weight: 400;
+
+    @media (max-width:650px){
+        font-size: 14px;
+        line-height: 20px;
+}
+        @media(min-width:650px)and (max-width: 1020px){
+            font-size: 14px;
+            line-height: 24px;
+        }
+        @media(min-width:1020px)and (max-width: 1280px){
+            font-size: 16px;
+            line-height: 24px;
+        }
+        @media(min-width: 1280px)and (max-width: 1580px){
+            font-size: 18px;
+            line-height: 26px;
+        }
+        @media(min-width: 1580px){
+            font-size: 18px;
+            line-height: 28px;
+        }
 }
