--- a/src/components/Our_warehouses/Warehouses.module.css
+++ b/src/components/Our_warehouses/Warehouses.module.css
@@ -29,40 +29,74 @@
     line-height: normal;
     text-transform: uppercase;
 
-    @media (max-width:600px) {
+    @media(max-width:600px) {
         font-size: 8px;
         letter-spacing: 0.8px;
     }
     @media(min-width:600px) and (max-width:1050px){
         font-size:10px;
-        letter-spacing:1.2px;
+        letter-spacing:1px;
     }
     @media(min-width:1050px)and(max-width:1300px){
-        font-size:10px;
+        font-size:12px;
         letter-spacing:1.2px;
     }
-    
-   
+    @media(min-width:1300px) {
+        font-size: 14px;
+        letter-spacing: 1.4px;
+    }
 }
+
 .header_text{
-    /* text-align: center; */
-    font-size: 28px;
     font-style: normal;
     font-weight: 600;
-    line-height: 32px;
+    @media(max-width:600px) {
+        font-size: 28px;
+        line-height: 32px;
+    }
+    @media(min-width:600px) and (max-width:1050px){
+        font-size: 32px;
+        line-height: 42px;
+    }
+    @media(min-width:1050px)and(max-width:1300px){
+        font-size:44px;
+        line-height:54px;
+    }
+    @media(min-width:1300px) {
+        font-size: 50px;
+        line-height: 60px;
+    }
 }
 
 .warehouse__text_bold{
     color:var(--primary-text-color);
-    font-size: 14px;
     font-style: normal;
     font-weight: 600;
-    line-height: 20px; /* 153.846% */
+
+    @media(max-width:1050px){
+        font-size: 14px;
+        line-height: 20px;
+    }
+    @media(min-width:600px) and (max-width:1050px){
+        font-size: 14px;
+        line-height: 24px;
+    }
+    @media(min-width:1050px){
+        font-size: 16px;
+        line-height: 24px;
+    }
+    
 }
 .warehouse__text_italic{
     color:var(--invisible-text);
-    font-size: 13px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px; /* 153.846% */
+    @media(max-width:1050px){
+        font-size: 14px;
+        line-height: 20px;
+    }
+    @media(min-width:1050px){
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
