--- a/src/components/Our_warehouses/Warehouses.module.css
+++ b/src/components/Our_warehouses/Warehouses.module.css
@@ -14,12 +14,11 @@
 
 .conteiner{
     @media(min-width:600px) and (max-width:1050px){
-        max-width:90%;
         padding-left:1%;
         padding-right:1%;
     }
     @media(min-width:1050px){
-        /* max-width:90%; */
+        /* max-width:80%; */
     }
 }
 .logo__text_name{
@@ -54,13 +53,9 @@
         font-size: 28px;
         line-height: 32px;
     }
-    @media(min-width:600px) and (max-width:1050px){
+    @media(min-width:600px) and (max-width:1300px){
         font-size: 32px;
         line-height: 42px;
-    }
-    @media(min-width:1050px)and(max-width:1300px){
-        font-size:44px;
-        line-height:54px;
     }
     @media(min-width:1300px) {
         font-size: 50px;
@@ -99,4 +94,14 @@
         font-size: 16px;
         line-height: 24px;
     }
+}
+.warehouse__button_size{
+    border: 1px solid rgba(255, 255, 255, 0.36);
+    @media(max-width:1050px) {
+        padding:22px 70px;
+    }
+    @media(min-width:1050px){
+        padding:24px 56px;
+    }
+    
 }
