--- a/src/components/About_us/Number.module.css
+++ b/src/components/About_us/Number.module.css
@@ -30,7 +30,7 @@
     display:none;
     @media (min-width:650px) and (max-width: 1280px){
         display:block;
-        width: 726.036px;
+        width: 100%;
         height: 380.642px;
         transform: rotate(4.483deg);
         flex-shrink: 0;
@@ -45,7 +45,7 @@
     display:none;
     @media (min-width:1280px){
         display:block;
-        width: 900px;
+        width: 100%;
         height: 600px;
         transform: rotate(4.493deg);
         flex-shrink: 0;
@@ -64,8 +64,14 @@
         padding-top:60px;
         padding-bottom:60px;
 }
-
+.section__info_textContainer{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+}
 .header__section_name{
+    
     @media (max-width:650px){
         text-align: center;
         font-family: Montserrat;
@@ -97,6 +103,8 @@
         }
 }
 .container__section{
+    /* padding-left:15px;
+    padding-right:15px; */
     @media (max-width:650px){
     display:flex;
     gap:20px;
@@ -105,32 +113,28 @@
 
     @media(min-width:650px)and (max-width: 1020px){
         display:grid;
-        grid-template-columns:350px 350px;
-        grid-template-rows:150px 150px;
-        gap:10px;
-        padding-left:25px;
+        grid-template-columns:49% 49%;
+        grid-template-rows:130px 130px;
+        gap:2%;
     }
     @media(min-width:1020px)and (max-width: 1280px){
         display:grid;
-        grid-template-columns:340px 340px 340px;
+        grid-template-columns:33% 33% 33%;
         grid-template-rows:150px 150px;
-        gap:10px;
-        padding-left:25px;
+        gap:2%;
     }
 
     @media(min-width: 1280px)and (max-width: 1580px){
         display:grid;
         grid-template-columns:380px 380px 380px;
         grid-template-rows:170px 170px;
-        gap:10px;
-        padding-left:25px;
+        gap:2%;
     }
     @media(min-width: 1580px){
         display:grid;
         grid-template-columns:400px 400px 400px;
         grid-template-rows:190px 190px;
-        gap:10px;
-        padding-left:25px;
+        gap:2%;
     }
 }
 .one_section{
