--- a/src/components/About_us/Number.module.css
+++ b/src/components/About_us/Number.module.css
@@ -15,6 +15,8 @@
 .section__info_bg_smallest{
     display:none;
     @media (max-width:650px){
+        opacity:0.26;
+        
         display:block;
         width: 320.053px;
         height: 167.416px;
@@ -29,6 +31,7 @@
 .section__info_bg_small{
     display:none;
     @media (min-width:650px) and (max-width: 1280px){
+        opacity:0.26;
         display:block;
         width: 100%;
         height: 380.642px;
@@ -44,6 +47,7 @@
 .section__info_bg_big{
     display:none;
     @media (min-width:1280px){
+        opacity:0.26;
         display:block;
         width: 100%;
         height: 600px;
