--- a/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -2,15 +2,28 @@
     display:flex;
     justify-content:center;
     align-items:center;
+    flex-direction:column;
     color:white;
 }
-
-.calc__container{
+.section_hidden{
+    display:hidden;
+    visibility:hidden;
+}
+.calc__container_stepOne{
     display:flex;
     justify-content:center;
     align-items:center;
     flex-direction:column;
-    padding:60px 15px ;
+    padding:60px 15px 0px 15px ;
+    max-width:450px;
+}
+.calc__container_stepTwo{
+    padding:25px 15px 60px 15px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    max-width:450px;
 }
 
 .calc__logo_textName{
@@ -85,7 +98,8 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    align-items: center;
+    align-items:start;
+    
 }
 
 
@@ -169,5 +183,26 @@
 
 .separate_line{
     border: 1px solid rgba(85, 122, 161, 0.30);
-    /* width:100svw; */
+    width:100svw;
+}
+
+.calc__container_results{
+    display:grid;
+    grid-template-rows:auto auto auto auto;
+}
+.calc__container_results_date{
+    display:grid;
+    grid-template-columns: 60% 40%;
+    padding-bottom:25px;
+}
+
+.datepicker-input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+    box-sizing: border-box;
 }
