--- a/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -4,6 +4,9 @@
     align-items:center;
     flex-direction:column;
     color:white;
+    position:relative;
+
+    background-image:'/src/assets/images/mapSmall.svg';
 }
 .section_hidden{
     display:hidden;
@@ -15,7 +18,9 @@
     align-items:center;
     flex-direction:column;
     padding:60px 15px 0px 15px ;
-    max-width:450px;
+    max-width:400px;
+    border-left: 1px solid rgba(43, 61, 82, 0.30);
+    border-right: 1px solid rgba(43, 61, 82, 0.30);
 }
 .calc__container_stepTwo{
     padding:25px 15px 60px 15px;
@@ -23,7 +28,10 @@
     justify-content:center;
     align-items:center;
     flex-direction:column;
-    max-width:450px;
+    max-width:400px;
+
+    border-left: 1px solid rgba(43, 61, 82, 0.30);
+    border-right: 1px solid rgba(43, 61, 82, 0.30);
 }
 
 .calc__logo_textName{
@@ -196,7 +204,7 @@
     padding-bottom:25px;
 }
 
-.datepicker-input {
+.datepicker_input {
     position: absolute;
     left: 0;
     top: 0;
@@ -205,4 +213,24 @@
     opacity: 0;
     cursor: pointer;
     box-sizing: border-box;
+}
+
+.datepicker_input::-webkit-calendar-picker-indicator {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+
+.datepicker__toggle_button{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-bottom: 1px solid rgba(188, 201, 218, 0.2);
 }
