--- a/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -1,52 +1,70 @@
 .calc__container_section{
     color:white;
     position:relative;
-
-    @media(max-width: 1050px){
-        display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction:column;
-    background-image:'/src/assets/images/mapSmall.svg';
-    }
-    @media(min-width:1050px){
-        display:grid;
-        grid-template-columns:40% 60%;
-        /* display:flex;
-        flex-direction: row-reverse;
-        flex-basis: auto;
-        align-items:center;
-        justify-content:space-between; */
-    }
+    padding-left:5%;
+    padding-right:5%;
+    width:100svw;
 }
 .section_hidden{
     display:hidden;
     visibility:hidden;
 }
+.borders{
+
+    @media(max-width: 1050px){
+        /* background-image:'/src/assets/images/mapSmall.svg'; */
+        border-left: 2px solid rgba(43, 61, 82, 0.30);
+        border-right: 2px solid rgba(43, 61, 82, 0.30);
+    }
+    @media(min-width:1050px){
+        /* display:flex;
+        flex-direction: row-reverse;
+        flex-basis: auto;
+        align-items:center;
+        justify-content:space-between; */
+        padding-left:1%;
+        padding-right:1%;
+        border-left: 2px solid rgba(43, 61, 82, 0.30);
+        border-right: 2px solid rgba(43, 61, 82, 0.30);
+}}
+.container{
+    margin-top:60px;
+    @media(max-width: 1050px){
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        flex-direction:column;
+    }
+    @media(min-width:1050px){
+        display:grid;
+        grid-template-columns:35% 65%;
+        gap:30px;
+        padding-left:1%;
+        padding-right:1%;
+}
+}
 .calc__container_stepOne{
     display:flex;
     align-items:center;
     flex-direction:column;
-    padding:60px 15px 0px 15px ;
+    /* padding:60px 0px ; */
     max-width:400px;
     @media(max-width:1050px){
-        border-left: 1px solid rgba(43, 61, 82, 0.30);
-        border-right: 1px solid rgba(43, 61, 82, 0.30);
         justify-content:center;
     }
 }
 .calc__container_stepTwo{
     @media(max-width:1050px){
-        padding:0px 15px 60px 15px;
+        /* padding:0px 15px 60px 15px; */
         display:flex;
         /* align-items:center; */
         flex-direction:column;
         width:400px; 
-        border-left: 1px solid rgba(43, 61, 82, 0.30);
-        border-right: 1px solid rgba(43, 61, 82, 0.30);
     }
     @media(min-width:1050px){
-        
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
     }
 }
 
@@ -78,7 +96,7 @@
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding-bottom:25px;
+    padding-bottom:20px;
 }
 
 .calc__container_number{
@@ -222,12 +240,13 @@
     @media(min-width:1050px){
         display:grid;
         justify-content:center;
+        
     }
 }
 .calc__container_results_date{
     @media(max-width:1050px){
         display:grid;
-        grid-template-columns: 60% 40%;
+        grid-template-columns: 70% 30%;
         padding-bottom:25px;
     }
     @media(min-width:1050px){
@@ -243,11 +262,25 @@
         padding-bottom:25px;
     }
     @media(min-width:1050px){
-        padding-top:45px;
+        padding-top:20px;
         display:grid;
-        grid-template-columns: 60% 40%;
+        grid-template-columns: 55% 45%;
         width:250px;
         justify-content:center;
+    }
+}
+
+.calc__container_results_date2{
+    
+    @media(max-width:1050px){
+        display:grid;
+        grid-template-columns: 60% 40%;
+        padding-bottom:25px;
+    }
+    @media(min-width:1050px){
+        padding-top:10px;
+        display:grid;
+        grid-template-columns: 55% 45%;
     }
 }
 
@@ -280,30 +313,19 @@
     width: 100%;
     height: 100%;
     border-bottom: 1px solid rgba(188, 201, 218, 0.2);
+    display:flex;
+    align-items:center;
 }
 
 .legend_second{
     @media(max-width:1050px){
         padding-top:25px;
     }
-    @media(min-width:1050px){
-        
-    }
 }
 
 .map__section{
     @media(min-width:1050px){
-        padding-left:30px;
         padding-right:30px;
-        padding-top:60px;
-        display:flex;
-    }
-}
-.map__div{
-    @media(min-width:1050px){
-        padding-left:2%;
-        padding-right:2%;
-        padding-top:3%;
         display:flex;
     }
 }
@@ -316,15 +338,29 @@
     @media(min-width:1050px){
         background-color:rgba(85, 122, 161, 0.2);
         width:100%;
-        height:500px;
+        height:100%;
     }
 }
+.map__div{
+    @media(min-width:1050px){
+        padding-left:2%;
+        padding-right:2%;
+        padding-top:3%;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        min-height:350px;
+    }
+}
+
 .country__name{
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px; /* 150% */
     text-transform: uppercase;
+    
 }
 
 .country__name_main{
@@ -339,6 +375,18 @@
     }
 }
 .way{
-    height:400px;
-    width:90%;
+    max-height:50%;
+    width:95%;
+    padding-bottom:20px;
+}
+.visibility{
+    @media(max-width:1050px){
+        display:none;
+        visibility:hidden; 
+    }
+}
+.bg_icon_big{
+    position:absolute;
+    right:0;
+    top:0;
 }
