--- a/src/components/Main slide/MainSlide.module.css
+++ b/src/components/Main slide/MainSlide.module.css
@@ -6,7 +6,8 @@ visibility:hidden;
         background-image:url('/src/assets/images/Rectangle2.png');
         color:white;
         background-position: center; 
-        padding-left: 15px;
+        padding-left: 5%;
+        padding-right:5%;
         padding-top: 5px;
     }
     @media (min-width: 1050px) and (max-width: 1280px) { 
