--- a/src/components/Our_warehouses/Warehouses.module.css
+++ b/src/components/Our_warehouses/Warehouses.module.css
@@ -12,23 +12,42 @@
     background-position: center;
     padding-left:5%;
     padding-right:5%;
-    
 }
 
 .borders{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+
     position:relative;
-    padding-left:1%;
-    padding-right:1%;
+    padding-left:2%;
+    padding-right:2%;
     border-left: 1px solid rgba(43, 61, 82, 0.30);
     border-right: 1px solid rgba(43, 61, 82, 0.30);
-    @media(max-width:1050px){
-        display:flex;
+
+}
+.container_div{
+    position: relative; 
+    max-width:1600px;
+    @media (max-width: 950px) { 
+        flex-direction: column; 
+        justify-content: center; 
+        align-items: center; 
+        padding-top: 60px;
     }
-    @media(min-width:1050px){
+    @media(min-width:950px) and (max-width:1300px){
         display:grid;
+        grid-template-columns:50% 50%;
+    }
+    @media(min-width:1300px){
+        display:grid;
+        grid-template-columns:50% 50%;
     }
 }
-
+.conteiner{
+    max-width:75%;
+}
 .logo__text_name{
     color: var(--light-blue-text);
     font-style: normal;
@@ -39,18 +58,23 @@
     @media(max-width:600px) {
         font-size: 8px;
         letter-spacing: 0.8px;
+        padding-bottom: 10px;
     }
-    @media(min-width:600px) and (max-width:1050px){
+    @media(min-width:600px) and (max-width:950px){
         font-size:10px;
         letter-spacing:1px;
+        padding-bottom: 10px;
     }
-    @media(min-width:1050px)and(max-width:1300px){
+    @media(min-width:950px) and (max-width:1300px){
         font-size:12px;
         letter-spacing:1.2px;
+        padding-top: 60px;
+        padding-bottom: 0.75rem;
     }
     @media(min-width:1300px) {
         font-size: 14px;
         letter-spacing: 1.4px;
+        padding-bottom: 1.25rem;
     }
 }
 
@@ -76,15 +100,15 @@
     font-style: normal;
     font-weight: 600;
 
-    @media(max-width:1050px){
+    @media(max-width:950px){
         font-size: 14px;
         line-height: 20px;
     }
-    @media(min-width:600px) and (max-width:1050px){
+    @media(min-width:600px) and (max-width:950px){
         font-size: 14px;
         line-height: 24px;
     }
-    @media(min-width:1050px){
+    @media(min-width:950px){
         font-size: 16px;
         line-height: 24px;
     }
@@ -94,21 +118,21 @@
     color:var(--invisible-text);
     font-style: normal;
     font-weight: 400;
-    @media(max-width:1050px){
+    @media(max-width:950px){
         font-size: 14px;
         line-height: 20px;
     }
-    @media(min-width:1050px){
+    @media(min-width:950px){
         font-size: 16px;
         line-height: 24px;
     }
 }
 .warehouse__button_size{
     border: 1px solid rgba(255, 255, 255, 0.36);
-    @media(max-width:1050px) {
+    @media(max-width:950px) {
         padding:22px 70px;
     }
-    @media(min-width:1050px){
+    @media(min-width:950px){
         padding:24px 56px;
     }
     
