--- a/src/components/About_us/Number.module.css
+++ b/src/components/About_us/Number.module.css
@@ -1,13 +1,11 @@
 .main__section{
-    display:flex;
-    justify-content:center;
-    align-itmes:center;
     color:white;
-    padding-left:16px;
-    padding-right:16px;
+    padding-left:5%;
+    padding-right:5%;
     position:relative;
-
+    width:100svw;
 }
+
 .section_hidden{
     display:hidden;
     visibility:hidden;
@@ -59,14 +57,24 @@
         overflow:hidden;
 }
 }
+.border__container{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
 
+    padding-top:60px;
+    padding-bottom:60px;
+    padding-left:1%;
+    padding-right:1%;
+    border-left: 1px solid rgba(43, 61, 82, 0.30);
+    border-right: 1px solid rgba(43, 61, 82, 0.30);
+}
 .section__info{
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction:column;
-        padding-top:60px;
-        padding-bottom:60px;
 }
 .section__info_textContainer{
     display:flex;
@@ -75,36 +83,25 @@
     justify-content:center;
 }
 .header__section_name{
-    
+    text-align: center;
+    font-style: normal;
+    font-weight: 600;
     @media (max-width:650px){
-        text-align: center;
-        font-family: Montserrat;
-        font-size: 28px;
-        font-style: normal;
-        font-weight: 600;
         line-height: 32px;
         padding-top:10px;
         padding-bottom:20px;
-}
-        @media(min-width:650px)and (max-width: 1280px){
-            text-align: center;
-            font-family: Montserrat;
-            font-size: 32px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 60px;
-            padding-bottom:20px;
-        }
+    }
+    @media(min-width:650px)and (max-width: 1280px){
+        font-size: 32px;
+        line-height: 60px;
+        padding-bottom:20px;
+    }
     
-        @media(min-width: 1280px){
-            text-align: center;
-            font-family: Montserrat;
-            font-size: 50px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 60px;
-            padding-bottom:30px;
-        }
+    @media(min-width: 1280px){
+        font-size: 50px;
+        line-height: 60px;
+        padding-bottom:30px;
+    }
 }
 .container__section{
     /* padding-left:15px;
@@ -113,22 +110,21 @@
     display:flex;
     gap:20px;
     flex-direction:column;
-}
-
-    @media(min-width:650px)and (max-width: 1020px){
+    }
+    @media(min-width:650px) and (max-width: 1020px){
         display:grid;
         grid-template-columns:49% 49%;
         grid-template-rows:130px 130px;
         gap:2%;
     }
-    @media(min-width:1020px)and (max-width: 1280px){
+    @media(min-width:1020px) and (max-width: 1280px){
         display:grid;
         grid-template-columns:33% 33% 33%;
         grid-template-rows:150px 150px;
         gap:2%;
     }
 
-    @media(min-width: 1280px)and (max-width: 1580px){
+    @media(min-width: 1280px) and (max-width: 1580px){
         display:grid;
         grid-template-columns:380px 380px 380px;
         grid-template-rows:170px 170px;
@@ -159,31 +155,31 @@
         max-width:320px;
         height:125px;
     }
-        @media(min-width:1020px)and (max-width: 1280px){
+    @media(min-width:1020px)and (max-width: 1280px){
             display:flex;
             background-color:#23303F;
             padding:30px 24px;
             gap:20px;
             max-width:310px;
             height:140px;
-        }
+    }
     
-        @media(min-width: 1280px)and (max-width: 1580px){
-            display:flex;
-            background-color:#23303F;
-            padding:30px 24px;
-            gap:30px;
-            max-width:360px;
-            height:150px;
-        }
+    @media(min-width: 1280px)and (max-width: 1580px){
+        display:flex;
+        background-color:#23303F;
+        padding:30px 24px;
+        gap:30px;
+        max-width:360px;
+        height:150px;
+    }
         @media(min-width: 1580px){
-            display:flex;
-            background-color:#23303F;
-            padding:30px 24px;
-            gap:30px;
-            max-width:390px;
-            height:180px;
-        }
+        display:flex;
+        background-color:#23303F;
+        padding:30px 24px;
+        gap:30px;
+        max-width:390px;
+        height:180px;
+    }
 }
 
 .section__info_name{
@@ -201,21 +197,21 @@
     @media (max-width:650px){
         font-size: 14px;
         line-height: 20px;
-}
-        @media(min-width:650px)and (max-width: 1020px){
-            font-size: 14px;
-            line-height: 24px;
-        }
-        @media(min-width:1020px)and (max-width: 1280px){
-            font-size: 16px;
-            line-height: 24px;
-        }
-        @media(min-width: 1280px)and (max-width: 1580px){
-            font-size: 18px;
-            line-height: 26px;
-        }
-        @media(min-width: 1580px){
-            font-size: 18px;
-            line-height: 28px;
-        }
+    }
+    @media(min-width:650px)and (max-width: 1020px){
+        font-size: 14px;
+        line-height: 24px;
+    }
+    @media(min-width:1020px)and (max-width: 1280px){
+        font-size: 16px;
+        line-height: 24px;
+    }
+    @media(min-width: 1280px)and (max-width: 1580px){
+        font-size: 18px;
+        line-height: 26px;
+    }
+    @media(min-width: 1580px){
+        font-size: 18px;
+        line-height: 28px;
+    }
 }
