--- a/src/components/Main slide/MainSlide.module.css
+++ b/src/components/Main slide/MainSlide.module.css
@@ -22,7 +22,7 @@ visibility:hidden;
         padding-left:30px;
         padding-top: 5px;
     }
-    @media (min-width: 1280px){
+    @media (min-width: 1280px) and (max-width:1600px){
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
         background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.png');
@@ -32,6 +32,15 @@ visibility:hidden;
         color:white;
         padding-left:30px;
         padding-top: 5px;
+    }
+    @media(min-width:1600px){
+        width: 100%; /* Ширина контейнера */
+        height: 100%; /* Высота контейнера */
+        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.png');
+        background-size: 20% 100%, 80% 100%; /* Размеры изображений */
+        background-position: left center, right center; /* Позиционирование изображений */
+        background-repeat: no-repeat;
+        color:white;
     }
 }
 .textarea{
