--- a/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -75,10 +75,12 @@
 .calc__container_stepTwo{
     @media(max-width:1050px){
         /* padding:0px 15px 60px 15px; */
-        display:flex;
+        
         /* align-items:center; */
-        flex-direction:column;
-        width:470px; 
+        /* padding-left: 15px; */
+       
+        /* max-width:470px;  */
+        width:100%;
     }
     @media(min-width:1050px){
         display:flex;
@@ -226,7 +228,6 @@
 .custom__radio input + .radio + .text{
     cursor: pointer;
     color: var(--White, #FFF);
-    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -252,9 +253,11 @@
 }
 
 .calc__container_results{
+    max-width: 470px;
     @media(max-width:1050px){
         display:grid;
         grid-template-rows:auto auto auto auto;
+        gap:auto;
     }
     @media(min-width:1050px){
         display:grid;
@@ -265,8 +268,9 @@
 .calc__container_results_date{
     @media(max-width:1050px){
         display:grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 50% 50%;
         padding-bottom:25px;
+        gap:3%;
     }
     @media(min-width:1050px){
         display:none;
@@ -277,7 +281,7 @@
     
     @media(max-width:1050px){
         display:grid;
-        grid-template-columns: 60% 40%;
+        grid-template-columns: 50% 50%;
         padding-bottom:25px;
     }
     @media(min-width:1050px){
@@ -302,12 +306,29 @@
         grid-template-columns: 55% 45%;
     }
 }
-
+/* .calc__container_stepTwo_without_number{
+    width: 110%;
+} */
+.date{
+    position: relative;
+    @media(max-width:400px){
+        width:100%
+    }
+    @media(min-width:400px) and (max-width:470px){
+        width:70%;
+    }
+    @media(min-width:470px) and (max-width:1050px){
+        width:55%;
+    }
+    @media(min-width:1050px){
+        width:100%;
+    }
+}
 .datepicker_input {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     opacity: 0;
     cursor: pointer;
