--- a/src/components/Main slide/MainSlide.module.css
+++ b/src/components/Main slide/MainSlide.module.css
@@ -1,14 +1,15 @@
 .container_hidden{
 visibility:hidden;
 }
-.container{
+.section__main_bg{
+    display: flex;
+    justify-content: center;
     @media (max-width: 1050px){
         background-image:url('/src/assets/images/Rectangle2.png');
         color:white;
         background-position: center; 
-        padding-left: 5%;
-        padding-right:5%;
         padding-top: 5px;
+        width: 100%;
     }
     @media (min-width: 1050px) and (max-width: 1280px) { 
         width: 100%; /* Ширина контейнера */
@@ -19,7 +20,6 @@ visibility:hidden;
         background-repeat: no-repeat;
 
         color:white;
-        padding-left:30px;
         padding-top: 5px;
     }
     @media (min-width: 1280px) and (max-width:1600px){
@@ -30,24 +30,33 @@ visibility:hidden;
         background-position: left center, right center; /* Позиционирование изображений */
         background-repeat: no-repeat;
         color:white;
-        padding-left:30px;
         padding-top: 5px;
     }
-    @media(min-width:1600px){
+    @media (min-width: 1600px) {
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
-        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.png');
-        background-size: 20% 100%, 80% 100%; /* Размеры изображений */
-        background-position: left center, right center; /* Позиционирование изображений */
+        background-image: url('/src/assets/images/New_Flowers_bg_mainSlide.jpg'), url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.png'),url('');
+        /* background-size: cover, fixed, fixed, cover; Размеры изображений */
+        background-position: left center, center, center, right center; /* Позиционирование изображений */
         background-repeat: no-repeat;
-        color:white;
+        /* background-size: contain, 800px, 800px, auto;  */
+        color: white;
+    }
+}
+.container{
+    width: 100%;
+    @media (min-width: 1050px) and (max-width: 1280px) { 
+        min-width: 1050px;
+        max-width:1280px;
+    }
+    @media (min-width: 1280px){
+        max-width:1600px;
     }
 }
 .textarea{
     
     @media (max-width: 1050px){
         padding-left: 15px;
-
     }
     @media (min-width: 1050px) and (max-width: 1280px) { 
         padding-left: 30%;
