--- a/src/components/Main slide/MainSlide.module.css
+++ b/src/components/Main slide/MainSlide.module.css
@@ -5,7 +5,7 @@ visibility:hidden;
     display: flex;
     justify-content: center;
     @media (max-width: 1050px){
-        background-image:url('/src/assets/images/Rectangle2.png');
+        background-image:url('/src/assets/images/Rectangle2.jpg');
         color:white;
         background-position: center; 
         padding-top: 5px;
@@ -14,7 +14,7 @@ visibility:hidden;
     @media (min-width: 1050px) and (max-width: 1280px) { 
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
-        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.png');
+        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.jpg');
         background-size: 20% 100%, 80% 100%; /* Размеры изображений */
         background-position: left center, right center; /* Позиционирование изображений */
         background-repeat: no-repeat;
@@ -67,4 +67,69 @@ visibility:hidden;
 }
 .flowerLogoWhite{
     color:white;
+}
+
+.mainSlide__text_norm{
+    @media(max-width:800px){
+        font-size: 12px;
+        line-height: 18px; /* 153.846% */
+        padding-top:15px;
+        padding-bottom:15px;
+    }
+    @media(min-width:800px) and (max-width:1500px){
+        font-size: 10px;
+        line-height: 16px;
+        padding-top:15px;
+        padding-bottom:15px;
+    }
+    @media(min-width:1500px){
+        line-height: 26px;
+        padding-top:28px;
+        padding-bottom:22px;
+    }
+}
+.mainSlide__text_bold{
+    @media(max-width:800px){
+        font-size: 12px;
+        line-height: 18px; /* 153.846% */
+        padding-top:15px;
+        padding-bottom:15px;
+    }
+    @media(min-width:800px) and (max-width:1500px){
+        font-size: 10px;
+        line-height: 16px;
+        padding-top:15px;
+        padding-bottom:15px;
+    }
+    @media(min-width:1500px){
+        line-height: 26px;
+        padding-top:28px;
+        padding-bottom:22px;
+    }
+}
+.countries{
+    color: var(--White, #FFF);
+    text-align: center;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    text-transform: uppercase;
+    @media(max-width:800px){
+        font-size: 10px;
+        line-height: normal;
+        padding-top:8px;
+        padding-bottom:8px;
+    }
+    @media(min-width:800px) and (max-width:1500px){
+        font-size: 10px;
+        line-height: 24px;
+        padding-top:20px;
+        padding-bottom:20px;
+    }
+    @media(min-width:1500px){
+        font-size: 14px;
+        line-height: 24px;
+        padding-top:25px;
+        padding-bottom:25px;
+    }
 }
